objects/Notification_Log__c.object
<CustomObject>
    <description>Object used to store metadata about automated notifications sent through custom logic. Can be leveraged for any sObject and/ or Record Type</description>
    <fields>
        <fullName>Notification_Sent_Date__c</fullName>
        <description>Date the notification associated to the record was sent</description>
        <label>Notification Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>Unique Id of the record associated to the SObject Name</description>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Associated Record Type of the SObject Record</description>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <description>Name of the Salesforce Standard or custom object the log record logic is related to</description>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Field_Name__c</fullName>
        <description>Name of the associated record's field that stores the trigger value for logic to execute</description>
        <label>Trigger Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Value__c</fullName>
        <description>Value stored in reference to the Trigger Field Name</description>
        <label>Trigger Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <description>Link to Salesforce record</description>
        <label>Record Link</label>
        <type>Url</type>
    </fields>
    <label>Notification Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SObject_Name__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Record_Link__c</columns>
        <columns>Trigger_Field_Name__c</columns>
        <columns>Trigger_Value__c</columns>
        <columns>Notification_Sent_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NL-{00000000}</displayFormat>
        <label>Notification Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Logs</pluralLabel>
    <recordTypes>
        <fullName>WBN_Log</fullName>
        <active>true</active>
        <description>WBN Notification Logs Record Type</description>
        <label>WBN Log</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>